# python-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
{{cookiecutter.__project_slug}}/: .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
{{cookiecutter.__project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.__project_slug}}/.github/: CODEOWNERS
{{cookiecutter.__project_slug}}/.github/workflows/: bandit.yml  build.yml  tests.yml
{{cookiecutter.__project_slug}}/src/{{cookiecutter.__package_name}}/: __init__.py
